Fixed overflow issues with showing pages

--- a/personal-profile/src/assets/css/App.css
+++ b/personal-profile/src/assets/css/App.css
@@ -1,4 +1,10 @@
 /* Main Components */
+.App {
+    max-height: 100vh;
+    max-width: 100vw;
+    overflow: hidden !important;
+    position: relative;
+}
 .main-component {
     width: 100vw;
 }
